all fixes